<resources>
    <string name="app_name">Food Information</string>
    <string name="nav_login">Login</string>
    <string name="nav_search">Search</string>
    <string name="nav_add">Add</string>
    <string-array name="Languages">
        <item>Turkish</item>
        <item>English</item>
        <item>German</item>
        <item>Spanish</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_language">Select Your Language :</string>
    <string name="start">Start</string>
    <string name="energy">Energy :</string>
    <string name="fat">Fat :</string>
    <string name="saturated_fatty_acids">Saturated Fatty Acids :</string>
    <string name="trans_fatty_acids">Trans Fatty Acids :</string>
    <string name="carbohydrate">Carbohydrate :</string>
    <string name="fiber">Fiber :</string>
    <string name="protein">Protein :</string>
    <string name="salt">Salt :</string>
    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="all_product">All Product</string>
    <string name="admin_panel_users">Admin Panel - Users</string>
    <string name="category">Category</string>
    <string name="kategorize_edilecekler">Kategorize Edilecekler</string>
    <string name="create_account">Create Account</string>
    <string name="rnek_hata">Örnek hata</string>
    <string name="remember">Remember</string>
    <string name="forget_password">Forgot Password</string>
    <string name="log_n">LOGın</string>
    <string name="dont_you_have_account">Dont you have account?</string>
    <string name="s_gn_up">Sıgn up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="product_name_nutella_product_categori">Product Name: Nutella Product Categori</string>
    <string name="_0_00">0.00</string>
    <string name="comments">Comments</string>
    <string name="which_language">Which Language</string>
    <string name="denemeeeeee">Denemeeeeee</string>
    <string name="hayat_mda_yedi_im_en_g_zel_pizzayd_daha_iyi_bir_pizza_d_nemiyorum_te_ekk_rler">Hayatımda yediğim en güzel pizzaydı. Daha iyi bir pizza düşünemiyorum. Teşekkürler.</string>
    <string name="_0">0</string>
    <string name="category_name">Category Name</string>
    <string name="barcode">BARCODE</string>
    <string name="product_name">Product Name</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-Mail</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="send_comment_here">Send Comment here</string>
    <string name="comment">Comment</string>
    <string name="scan">Scan</string>
    <string name="search">Search</string>
    <string name="categorize">Categorize</string>
    <string name="products">Products</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="createProduct">Create Product Unknown Error</string>
    <string name="CreateProductFail">Create Product Failure</string>
    <string name="PermissionNec">Permission necessary</string>
    <string name="perner">Permission is necessary</string>
    <string name="userSucDel">User successfully deleted</string>
    <string name="SelTheOp">Select the operation</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="UseWillBe">User will be ...</string>
    <string name="War">Warning</string>
    <string name="UseWilDel">User will be deleted</string>
    <string name="UseSucDel">User successfully deleted</string>
    <string name="TheİsAnError">There is an error in given information!</string>
    <string name="comAdSuc">Comment added successfully</string>
    <string name="RateSuc">Rate added successfully</string>
    <string name="YouHaveAlready">You have already voted this product!</string>
    <string name="LanGeEror">Language getting error</string>
    <string name="ErrorGet">Error getting error</string>
    <string name="ErrorGetCat">Error getting Category</string>
    <string name="productdeletedsuccessfully">Product Deleted Successfully</string>
    <string name="nocontent">This product don\'t have any content</string>
    <string name="update">Update</string>
    <string name="ContentUpload">Content Updated Successfully</string>
    <string name="acccreatedsucc">Account created successfully</string>
</resources>
