<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
        android:id="@+id/Categorize"
        android:icon="@drawable/merge"
        app:showAsAction="always"
        android:title="@string/categorize"
        />
        <item
        android:id="@+id/product"
        android:icon="@drawable/list"
        app:showAsAction="always"
        android:title="@string/products"
        />
        <item
        android:id="@+id/Users"
        android:icon="@drawable/group"
        app:showAsAction="always"
        android:title="@string/users"/>
        <item
        android:id="@+id/Settings"
        android:icon="@drawable/setting"
        app:showAsAction="always"
        android:title="@string/settings" />
</menu>